--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Start page</title>
+    <link rel="stylesheet" href="css/Style.css">
 </head>
 <body>
 <p>Her starter vi</p>
 
 </body>
+<script src="js/Gymj.js"></script>
 </html>
