--- a/src/main/resources/static/bodyweight_graf.html
+++ b/src/main/resources/static/bodyweight_graf.html
@@ -6,8 +6,34 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+<h1>Add Wight</h1>
+
+<form id="weightForm">
+    <label for="date">Date:</label>
+    <input type="date" id="date" required>
+
+    <br><br>
+
+    <label for="weight">Weight (kg):</label>
+    <input type="number" id="weight" step="0.1" required>
+
+    <br><br>
+
+    <button type="submit">Save</button>
+</form>
+
+<hr>
 
 <h1>Weight tracker</h1>
+
+<label for="startDate">Start date:</label>
+<input type="date" id="startDate">
+<label for="endDate">End date:</label>
+<input type="date" id="endDate">
+<button id="updateRange">Update Range</button>
+
+<br><br>
+
 <canvas id="weightChart" width="800" height="400"></canvas>
 
 <script src="js/Bodyweight_graf.js"></script>
