--- a/src/main/resources/static/bodyweight_graf.html
+++ b/src/main/resources/static/bodyweight_graf.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-<h1>Add Wight</h1>
+<h1>Add weight</h1>
 
 <form id="weightForm">
     <label for="date">Date:</label>
