--- a/src/main/resources/static/workout_menu.html
+++ b/src/main/resources/static/workout_menu.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Start page</title>
+    <title>Workout Menu</title>
     <link rel="stylesheet" href="css/Style.css">
 </head>
 <body>
-<p>Her starter vi</p>
 
+<h1> Workout Planner</h1>
 
-</body>
+<a href="create_plan.html">Create a new workout plan</a>
+<a href="view_plans.html">Your workout plans</a>
+
 <script src="js/workout.js"></script>
+</body>
 </html>
