--- a/src/main/resources/static/view_plans.html
+++ b/src/main/resources/static/view_plans.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Start page</title>
+    <title>Your Workout Plans</title>
     <link rel="stylesheet" href="css/Style.css">
 </head>
 <body>
-<p>Her starter vi</p>
 
+<h1>Your Workout Plans</h1>
+<div id="plansList"></div>
 
-</body>
 <script src="js/workout.js"></script>
+</body>
 </html>
