--- a/src/main/resources/static/frontpage.html
+++ b/src/main/resources/static/frontpage.html
@@ -13,8 +13,8 @@
     </div>
 
     <div class="sidebar-menu">
-        <a href="#" data-file="pageshowtest.html">Test 1</a>
-        <a href="#" data-file="test2.html">Test 2</a>
+        <a href="#" data-file="pr.html">Pr</a>
+        <a href="#" data-file="nutrition.html">Nutrition</a>
         <a href="#" data-file="test3.html">Test 3</a>
         <a href="#" data-file="test4.html">Test 4</a>
         <a href="#" data-file="test5.html">Test 5</a>
