Made the sidemenu work with Bodyweight_graf.js

--- a/src/main/resources/static/frontpage.html
+++ b/src/main/resources/static/frontpage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Frontpage</title>
     <link rel="stylesheet" href="css/frontpagecss.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 
@@ -15,7 +16,7 @@
     <div class="sidebar-menu">
         <a href="#" data-file="pr.html">Pr</a>
         <a href="#" data-file="nutrition.html">Nutrition</a>
-        <a href="#" data-file="test3.html">Test 3</a>
+        <a href="#" data-file="bodyweight_graf.html">Test 3</a>
         <a href="#" data-file="test4.html">Test 4</a>
         <a href="#" data-file="test5.html">Test 5</a>
         <a href="#" data-file="test6.html">Test 6</a>
@@ -30,7 +31,9 @@
 <div class="content" id="content-area" style="display:none;">
 
 </div>
-
 <script src="js/frontpagejs.js"></script>
+<script src="js/Bodyweight_graf.js" defer></script>
+<script src="js/pr.js" defer></script>
+
 </body>
 </html>
