--- a/src/main/resources/static/bodyweight_graf.html
+++ b/src/main/resources/static/bodyweight_graf.html
@@ -35,7 +35,7 @@
 <br><br>
 
 <canvas id="weightChart" width="800" height="400"></canvas>
-
+<script src="js/frontpagejs.js"></script>
 <script src="js/Bodyweight_graf.js"></script>
 </body>
 </html>
