forbundet pr og nutrition javascript fra frontpage

--- a/src/main/resources/static/frontpage.html
+++ b/src/main/resources/static/frontpage.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <title>Frontpage</title>
     <link rel="stylesheet" href="css/frontpagecss.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script defer src="/js/pr.js"></script>
+    <script defer src="/js/theme.js"></script>
+    <script defer src="/js/quotes.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script defer src="/js/nutrition.js"></script>
+    <script defer src="/js/theme.js"></script>
+    <script defer src="/js/quotes.js"></script>
 </head>
 <body>
 
@@ -19,6 +27,10 @@
         <a href="#" data-file="test4.html">Test 4</a>
         <a href="#" data-file="test5.html">Test 5</a>
         <a href="#" data-file="test6.html">Test 6</a>
+        <a class="nav-button" href="#" onclick="showNewQuote(); return false;">
+            <div class="nav-icon">💬</div>
+            Nyt citat
+        </a>
     </div>
 
     <div class="sidebar-user">
@@ -31,6 +43,8 @@
 
 </div>
 
+<script src="js/nutrition.js"></script>
+<script src="js/pr.js"></script>
 <script src="js/frontpagejs.js"></script>
 </body>
 </html>
