--- a/src/main/resources/static/frontpage.html
+++ b/src/main/resources/static/frontpage.html
@@ -23,7 +23,7 @@
     <div class="sidebar-menu">
         <a href="#" data-file="pr.html">Pr</a>
         <a href="#" data-file="nutrition.html">Nutrition</a>
-        <a href="#" data-file="test3.html">Test 3</a>
+        <a href="#" data-file="bodyweight_graf.html">Body weight</a>
         <a href="#" data-file="test4.html">Test 4</a>
         <a href="#" data-file="test5.html">Test 5</a>
         <a href="#" data-file="test6.html">Test 6</a>
