--- a/src/main/resources/static/bodyweight_graf.html
+++ b/src/main/resources/static/bodyweight_graf.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Bodyweight Graph</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="/css/Body_weight.css">
+
 </head>
 <body>
 <h1>Add weight</h1>
@@ -17,12 +19,12 @@
     <label for="weight">Weight (kg):</label>
     <input type="number" id="weight" step="0.1" required>
 
-    <br><br>
-
-    <button type="submit">Save</button>
 </form>
+<br>
+<button type="submit" form="weightForm">Save</button>
 
-<hr>
+
+<br><br>
 
 <h1>Weight tracker</h1>
 
@@ -30,6 +32,7 @@
 <input type="date" id="startDate">
 <label for="endDate">End date:</label>
 <input type="date" id="endDate">
+<br><br>
 <button id="updateRange">Update Range</button>
 
 <br><br>
