Sat iconer på frontpage.html og lavet det sidste css på bodyweight_graf.html

--- a/src/main/resources/static/bodyweight_graf.html
+++ b/src/main/resources/static/bodyweight_graf.html
@@ -29,13 +29,11 @@
 <h1>Weight tracker</h1>
 
 <label for="startDate">Start date:</label>
-<input type="date" id="startDate">
-<label for="endDate">End date:</label>
-<input type="date" id="endDate">
-<br><br>
-<button id="updateRange">Update Range</button>
+<input type="date" id="startDate" class="tacker-input">
+<label for="endDate" class="tracer_label">End date:</label>
+<input type="date" id="endDate" class="tacker-input">
 
-<br><br>
+<button id="updateRange">Change date</button>
 
 <canvas id="weightChart" width="800" height="400"></canvas>
 <script src="js/frontpagejs.js"></script>
