--- a/src/main/resources/static/frontpage.html
+++ b/src/main/resources/static/frontpage.html
@@ -8,10 +8,6 @@
     <script defer src="/js/pr.js"></script>
     <script defer src="/js/theme.js"></script>
     <script defer src="/js/quotes.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script defer src="/js/nutrition.js"></script>
-    <script defer src="/js/theme.js"></script>
-    <script defer src="/js/quotes.js"></script>
 </head>
 <body>
 
@@ -21,11 +17,16 @@
     </div>
 
     <div class="sidebar-menu">
-        <a href="#" data-file="pr.html">Pr</a>
-        <a href="#" data-file="nutrition.html">Nutrition</a>
-        <a href="#" data-file="bodyweight_graf.html">Body weight</a>
-        <a href="#" data-file="test4.html">Test 4</a>
-        <a href="#" data-file="test5.html">Test 5</a>
+        <a href="#" data-file="pr.html"><div class="nav-icon">🏋️</div>
+            PR</a>
+        <a href="#" data-file="nutrition.html"><div class="nav-icon">🍽️</div>
+            Nutrition</a>
+        <a href="#" data-file="bodyweight_graf.html"><div class="nav-icon">⚖️</div>
+            Weight tracker</a>
+        <a href="#" data-file="test4.html"><div class="nav-icon">📋</div>
+            Træningsplaner</a>
+        <a href="#" data-file="test5.html"><div class="nav-icon">📐</div>
+            BMI</a>
         <a href="#" data-file="test6.html">Test 6</a>
         <a class="nav-button" href="#" onclick="showNewQuote(); return false;">
             <div class="nav-icon">💬</div>
