--- a/src/main/resources/static/frontpage.html
+++ b/src/main/resources/static/frontpage.html
@@ -23,7 +23,7 @@
             Nutrition</a>
         <a href="#" data-file="bodyweight_graf.html"><div class="nav-icon">⚖️</div>
             Weight tracker</a>
-        <a href="#" data-file="test4.html"><div class="nav-icon">📋</div>
+        <a href="#" data-file="workout_menu.html"><div class="nav-icon">📋</div>
             Træningsplaner</a>
         <a href="#" data-file="test5.html"><div class="nav-icon">📐</div>
             BMI</a>
