--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -28,7 +28,7 @@
             <div class="nav-icon">⚖️</div>
             Vægt-tracking
         </a>
-        <a class="nav-button" href="#">
+        <a class="nav-button" href="/workout_menu.html">
             <div class="nav-icon">📋</div>
             Træningsplaner
         </a>
