--- a/src/main/resources/static/plan_details.html
+++ b/src/main/resources/static/plan_details.html
@@ -2,42 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Workout Plan</title>
-    <link rel="stylesheet" href="css/Style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Workout Plan Details</title>
+    <link rel="stylesheet" href="css/workout.css">
+    <link rel="stylesheet" href="css/plan_details.css">
 </head>
 <body>
 
-<h1 id="planTitle"></h1>
+<aside class="sidebar">
+    <div class="logo">Gym-J</div>
+    <nav class="nav">
+        <a class="nav-button active" href="/index.html"><div class="nav-icon">🏠</div>Startside</a>
+        <a class="nav-button" href="/nutrition.html"><div class="nav-icon">🍽️</div>Nutrition</a>
+        <a class="nav-button" href="/pr.html"><div class="nav-icon">🏋️</div>PR</a>
+        <a class="nav-button" href="#"><div class="nav-icon">⚖️</div>Vægt-tracking</a>
+        <a class="nav-button" href="/workout_menu.html"><div class="nav-icon">📋</div>Træningsplaner</a>
+        <a class="nav-button" href="#"><div class="nav-icon">📐</div>BMI</a>
+        <a class="nav-button" href="#" onclick="showNewQuote(); return false;"><div class="nav-icon">💬</div>Nyt citat</a>
+    </nav>
+</aside>
 
-<h2>Exercises in Plan</h2>
-<div id="exerciseList"></div>
-
-<h2>Add Exercise to Plan</h2>
-<form id="exerciseForm">
-    <input type="text" id="exerciseName" placeholder="Exercise Name" required>
-    <input type="text" id="description" placeholder="Description">
-    <input type="number" id="weight" placeholder="Weight" required>
-    <input type="number" id="sets" placeholder="Sets" required>
-    <input type="number" id="reps" placeholder="Reps" required>
-    <input type="text" id="imageUrl" placeholder="Image URL">
-
-    <button type="submit">Add Exercise</button>
-</form>
-
-<h2>Log Workout</h2>
-<form id="logForm">
-    <label>Select Exercise:</label>
-    <select id="exerciseSelectLog"></select>
-
-    <input type="number" id="logWeight" placeholder="Weight used" required>
-    <input type="number" id="logSets" placeholder="Sets completed" required>
-    <input type="number" id="logReps" placeholder="Reps completed" required>
-
-    <button type="submit">Save Log</button>
-</form>
-
-<h2>Previous Logs</h2>
-<div id="logList"></div>
+<main class="main plan-details">
+    <h1 id="planTitle">Workout Plan</h1>
+    <div id="exerciseList"></div>
+</main>
 
 <script src="js/workout.js"></script>
 </body>
