tilpasset css på login og opret bruger

--- a/src/main/resources/static/create_account.html
+++ b/src/main/resources/static/create_account.html
@@ -13,15 +13,15 @@
     <div class="login-form">
         <form id="createAccountForm">
             <div class="input-group">
-                <label for="name">Navn</label>
+                <label for="name">Name</label>
                 <input type="text" id="name" name="name">
             </div>
             <div class="input-group">
-                <label for="lastname">Efternavn</label>
+                <label for="lastname">Lastname</label>
                 <input type="text" id="lastname" name="lastname">
             </div>
             <div class="input-group">
-                <label for="username">Brugernavn</label>
+                <label for="username">Username</label>
                 <input type="text" id="username" name="username">
             </div>
             <div class="input-group">
@@ -29,10 +29,10 @@
                 <input type="email" id="email" name="email">
             </div>
             <div class="input-group">
-                <label for="password">Adgangskode</label>
+                <label for="password">Password</label>
                 <input type="password" id="password" name="password">
             </div>
-            <button type="submit">Opret Bruger</button>
+            <button type="submit">Create Account</button>
         </form>
     </div>
 </div>
