--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -14,16 +14,16 @@
     <div class="login-form">
         <form id="loginForm">
             <div class="input-group">
-                <label for="username">Brugernavn</label>
+                <label for="username">Username</label>
                 <input type="text" id="username" name="username">
             </div>
             <div class="input-group">
-                <label for="password">Adgangskode</label>
+                <label for="password">Password</label>
                 <input type="password" id="password" name="password">
             </div>
             <button type="submit">Login</button>
         </form>
-        <p class="link-text" id="createAccountLink">Opret Bruger</p>
+        <p class="link-text" id="createAccountLink">Create Account</p>
     </div>
 </div>
 
