Made the css work

--- a/src/main/resources/static/nutrition.html
+++ b/src/main/resources/static/nutrition.html
@@ -30,8 +30,9 @@
     <label>Protein (g)</label>
     <input type="number" id="protein" required>
 
-    <button type="submit">Gem</button>
+
   </form>
+  <button type="submit"  form="nutritionForm" class="style_button">Gem</button>
 
   <h2>Registreringer</h2>
   <table>
