--- a/src/main/resources/static/plan_details.html
+++ b/src/main/resources/static/plan_details.html
@@ -4,23 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workout Plan Details</title>
+    <link rel="stylesheet" href="css/frontpagecss.css">
     <link rel="stylesheet" href="css/workout.css">
     <link rel="stylesheet" href="css/plan_details.css">
 </head>
 <body>
-
-<aside class="sidebar">
-    <div class="logo">Gym-J</div>
-    <nav class="nav">
-        <a class="nav-button active" href="/index.html"><div class="nav-icon">🏠</div>Startside</a>
-        <a class="nav-button" href="/nutrition.html"><div class="nav-icon">🍽️</div>Nutrition</a>
-        <a class="nav-button" href="/pr.html"><div class="nav-icon">🏋️</div>PR</a>
-        <a class="nav-button" href="#"><div class="nav-icon">⚖️</div>Vægt-tracking</a>
-        <a class="nav-button" href="/workout_menu.html"><div class="nav-icon">📋</div>Træningsplaner</a>
-        <a class="nav-button" href="#"><div class="nav-icon">📐</div>BMI</a>
-        <a class="nav-button" href="#" onclick="showNewQuote(); return false;"><div class="nav-icon">💬</div>Nyt citat</a>
-    </nav>
-</aside>
 
 <main class="main plan-details">
     <h1 id="planTitle">Workout Plan</h1>
