--- a/src/main/resources/static/pr.html
+++ b/src/main/resources/static/pr.html
@@ -54,8 +54,9 @@
     <label>Dato</label>
     <input type="date" id="prDate" required>
 
-    <button type="submit">Gem PR</button>
+
   </form>
+  <button type="submit" form="prForm" class="style_button">Gem PR</button>
 
   <h2>Nuværende PR</h2>
   <table>
