--- a/src/main/resources/static/create_plan.html
+++ b/src/main/resources/static/create_plan.html
@@ -3,44 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Workout Plan</title>
+    <link rel="stylesheet" href="css/frontpagecss.css">
     <link rel="stylesheet" href="css/workout.css">
 </head>
 <body>
-
-<aside class="sidebar">
-    <div class="logo">Gym-J</div>
-    <nav class="nav">
-        <a class="nav-button active" href="/index.html">
-            <div class="nav-icon">🏠</div>
-            Startside
-        </a>
-        <a class="nav-button" href="/nutrition.html">
-            <div class="nav-icon">🍽️</div>
-            Nutrition
-        </a>
-        <a class="nav-button" href="/pr.html">
-            <div class="nav-icon">🏋️</div>
-            PR
-        </a>
-        <a class="nav-button" href="#">
-            <div class="nav-icon">⚖️</div>
-            Vægt-tracking
-        </a>
-        <a class="nav-button" href="/workout_menu.html">
-            <div class="nav-icon">📋</div>
-            Træningsplaner
-        </a>
-        <a class="nav-button" href="#">
-            <div class="nav-icon">📐</div>
-            BMI
-        </a>
-        <!-- 7. knap: skift citat -->
-        <a class="nav-button" href="#" onclick="showNewQuote(); return false;">
-            <div class="nav-icon">💬</div>
-            Nyt citat
-        </a>
-    </nav>
-</aside>
 
 <!-- MAIN CONTENT -->
 <div class="main">
