--- a/src/main/resources/static/frontpage.html
+++ b/src/main/resources/static/frontpage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Frontpage</title>
     <link rel="stylesheet" href="css/frontpagecss.css">
+    <link rel="stylesheet" href="css/workout.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script defer src="/js/pr.js"></script>
     <script defer src="/js/theme.js"></script>
