Made the javascript work on workout

--- a/src/main/resources/static/bodyweight_graf.html
+++ b/src/main/resources/static/bodyweight_graf.html
@@ -8,7 +8,9 @@
 
 </head>
 <body>
-<h1>Add weight</h1>
+<h1 class="hero-title">
+    Add <span class="hero-highlight">weight</span>
+</h1>
 
 <form id="weightForm">
     <label for="date">Date:</label>
@@ -24,7 +26,9 @@
 
 <br><br>
 
-<h1>Weight tracker</h1>
+<h1 class="hero-title">
+    Weight <span class="hero-highlight">tracker</span>
+</h1>
 
 <label for="startDate">Start date:</label>
 <input type="date" id="startDate" class="tacker-input">
