Nu virker links, de hedder bare det forkerte

--- a/src/main/resources/static/plan_details.html
+++ b/src/main/resources/static/plan_details.html
@@ -58,7 +58,7 @@
     <div id="exerciseList"></div>
 </main>
 </div>
-
+<script src="js/frontpagejs.js"></script>
 <script src="js/workout.js"></script>
 
 </body>
