--- a/src/main/resources/static/view_plans.html
+++ b/src/main/resources/static/view_plans.html
@@ -51,7 +51,7 @@
     <div id="plansList" style="margin-top: 20px;"></div>
 </div>
 </div>
-
+<script src="js/frontpagejs.js"></script>
 <script src="js/workout.js"></script>
 </body>
 </html>
