--- a/src/main/resources/static/create_account.html
+++ b/src/main/resources/static/create_account.html
@@ -8,7 +8,7 @@
 <body>
 <div class="login-container">
     <div class="login-header">
-        <h2>Opret Bruger</h2>
+        <h2>Create Account</h2>
     </div>
     <div class="login-form">
         <form id="createAccountForm">
@@ -17,16 +17,8 @@
                 <input type="text" id="name" name="name">
             </div>
             <div class="input-group">
-                <label for="lastname">Lastname</label>
-                <input type="text" id="lastname" name="lastname">
-            </div>
-            <div class="input-group">
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username">
-            </div>
-            <div class="input-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email">
             </div>
             <div class="input-group">
                 <label for="password">Password</label>
