Har gjordt så frontpage er på alle sider. Pr data loader når man kommer ind på siden og har lavet dummie data til dem

--- a/src/main/resources/static/create_plan.html
+++ b/src/main/resources/static/create_plan.html
@@ -13,26 +13,30 @@
 <body>
 
 <div class="sidebar">
+    <a href="frontpage.html">
     <div class="sidebar-header" id="home-button">
-        <a href="frontpage.html" class="no-link-style"> <h2>Gym-J</h2></a>
+        <h2><img src="images/GymJNew.png"></h2>
     </div>
-
+    </a>
     <div class="sidebar-menu">
-        <a href="#" data-file="pr.html"><div class="nav-icon">🏋️</div>
-            PR</a>
-        <a href="#" data-file="nutrition.html"><div class="nav-icon">🍽️</div>
-            Nutrition</a>
-        <a href="#" data-file="bodyweight_graf.html"><div class="nav-icon">⚖️</div>
-            Weight tracker</a>
-        <a href="#" data-file="workout_menu.html"><div class="nav-icon">📋</div>
-            Træningsplaner</a>
-        <a href="#" data-file="test5.html"><div class="nav-icon">📐</div>
-            BMI</a>
-        <a href="#" data-file="test6.html">Test 6</a>
-        <a class="nav-button" href="#" onclick="showNewQuote(); return false;">
-            <div class="nav-icon">💬</div>
-            Nyt citat
+
+        <a href="#" data-file="pr.html">
+            <div class="nav-icon"><img src="images/weight-lifting.png" alt="PR"></div>
+            PR
         </a>
+        <a href="#" data-file="nutrition.html">
+            <div class="nav-icon"><img src="images/restaurant.png" alt="Nutrition"></div>
+            Nutrition
+        </a>
+        <a href="#" data-file="bodyweight_graf.html">
+            <div class="nav-icon"><img src="images/weighing.png" alt="Weight tracker"></div>
+            Weight tracker
+        </a>
+        <a href="#" data-file="workout_menu.html">
+            <div class="nav-icon"><img src="images/clipboard.png" alt="Træningsplaner"></div>
+            Træningsplaner
+        </a>
+
     </div>
 
     <div class="sidebar-user">
