--- a/src/main/resources/static/frontpage.html
+++ b/src/main/resources/static/frontpage.html
@@ -30,7 +30,7 @@
             Weight tracker
         </a>
         <a href="#" data-file="workout_menu.html">
-            <div class="nav-icon"><img src="images/clipboard.png" alt="Træningsplaner"></div>
+            <div class="nav-icon"><img src="images/clipboard.png" alt="Workout plans"></div>
             Træningsplaner
         </a>
 
