--- a/src/main/resources/static/view_plans.html
+++ b/src/main/resources/static/view_plans.html
@@ -32,7 +32,7 @@
             Weight tracker
         </a>
         <a href="#" data-file="workout_menu.html">
-            <div class="nav-icon"><img src="images/clipboard.png" alt="Træningsplaner"></div>
+            <div class="nav-icon"><img src="images/clipboard.png" alt="Workout plans"></div>
             Træningsplaner
         </a>
 
