--- a/src/main/resources/static/create_plan.html
+++ b/src/main/resources/static/create_plan.html
@@ -34,7 +34,7 @@
         </a>
         <a href="#" data-file="workout_menu.html">
             <div class="nav-icon"><img src="images/clipboard.png" alt="Workout plans"></div>
-            Træningsplaner
+            Workout plans
         </a>
 
     </div>
