--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,7 +30,7 @@
         </a>
         <a class="nav-button" href="/workout_menu.html">
             <div class="nav-icon">📋</div>
-            Træningsplaner
+            Workout plans
         </a>
         <a class="nav-button" href="#">
             <div class="nav-icon">📐</div>
